# python-authorizer

./: CONTRIBUTING.md  init_gen.py  makefile  pyproject.toml
.github/workflows/: ci.yaml
buf/: buf.gen.yaml
magefiles/: go.mod  magefile.go
src/aserto/authorizer/v2/: __init__.py  authorizer_pb2.py  authorizer_pb2.pyi  authorizer_pb2_grpc.pyi
src/aserto/authorizer/v2/api/: __init__.py  decision_logs_pb2.py  decision_logs_pb2.pyi  identity_context_pb2.py  identity_context_pb2.pyi  module_pb2.py  policy_context_pb2.py  policy_instance_pb2.py
src/google/api/: http_pb2.pyi
src/protoc_gen_openapiv2/options/: annotations_pb2.py  openapiv2_pb2.py  openapiv2_pb2.pyi
