[tool.poetry]
name = "aserto_authorizer"
version = "0.20.2"
description = "gRPC client for Aserto Authorizer service instances"
readme = "README.md"
authors = ["Aserto, Inc. <pypi@aserto.com>"]
homepage = "https://github.com/aserto-dev/python-authorizer"
repository = "https://github.com/aserto-dev/python-authorizer"
documentation = "https://github.com/aserto-dev/python-authorizer"
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
packages = [
    { include = "aserto", from = "src" },
    { include = "google", from = "src" },
    { include = "protoc_gen_openapiv2", from = "src" }
]


[tool.poetry.dependencies]
certifi = "^2021.5.30"
python = "^3.8"
grpcio = ">=1.58.0"
typing-extensions = ">=3.10.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
grpc-stubs = "^1.53.0"

[tool.mypy]
explicit_package_bases = true
show_error_codes = true
check_untyped_defs = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = false
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = false
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

